move the index from root

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<link rel="stylesheet" href="styles/main.css">
+<link rel="stylesheet" href="./src/styles/main.css">
 <body>
   <div class="ticket">
     <picture class="king">
-      <source media="(min-width: 768px)" srcset="./assets/images/kingdice.webp">
-      <img src="./assets/images/KingDice.png" alt="KingDice">
+      <source media="(min-width: 768px)" srcset="./src/assets/images/kingdice.webp">
+      <img src="./src/assets/images/KingDice.png" alt="KingDice">
     </picture>
     <div class="container">
       <div class="up right">
@@ -21,9 +21,9 @@
             <h2 class="title">!Celebremos juntos¡</h2>
             <p>Mi cumpleaños No.</p>
             <picture>
-              <img src="./assets/images/Cuphead.webp" alt="Cuphead">
+              <img src="./src/assets/images/Cuphead.webp" alt="Cuphead">
               <h2>"10"</h2>
-              <img src="./assets/images/Mugman.webp" alt="Mugman">
+              <img src="./src/assets/images/Mugman.webp" alt="Mugman">
             </picture>
           </div>
           <p>Kevin Yazhid Palma</p>
@@ -39,17 +39,17 @@
           <div class="ubication">
             <p>Te espero en mi casita..!</p>
             <a href="https://www.google.com.gt/maps/dir//14.796454,-89.54995/@14.7966094,-89.5501348,19.08z">
-              <img src="./assets/images/ubication.png" alt="como llegar">
+              <img src="./src/assets/images/ubication.png" alt="como llegar">
             </a>
             <span>10mo Cumpleaños Kevin Yazhid Palma</span>
           </div>
         </div>
         <div class="images">
           <picture class="root-pack">
-            <img src="./assets/images/The_Root_Pack.webp" alt="RootPack">
+            <img src="./src/assets/images/The_Root_Pack.webp" alt="RootPack">
           </picture>
           <picture class="bars">
-            <img src="./assets/images/bars" alt="">
+            <img src="./src/assets/images/bars" alt="">
           </picture>
         </div>
       </div>
@@ -58,12 +58,12 @@
   <footer>
     <div class="container-footer">
       <picture class="cup">
-        <img src="./assets/images/cuphead-happy.gif" alt="">
+        <img src="./src/assets/images/cuphead-happy.gif" alt="">
       </picture>
     </div>
-    <audio id="sound" src="./assets/audio/Cuphead Floral Fury8bit.mp3" loop controls></audio>
+    <audio id="sound" src="./src/assets/audio/Cuphead Floral Fury8bit.mp3" loop controls></audio>
   </footer>
 
-  <script src="./js/main.js"></script>
+  <script src="./src/js/main.js"></script>
 </body>
 </html>
