--- a/index.html
+++ b/index.html
@@ -5,52 +5,55 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>🎉 🎁 Mi CImple 🎊 🎈</title>
+  <link rel="shortcut icon" type="image/jpg" href="./src/assets/images/icon.webp"/>
 </head>
 <link rel="stylesheet" href="./src/styles/main.css">
 <body>
-  <div class="ticket">
-    <picture class="king">
-      <source media="(min-width: 768px)" srcset="./src/assets/images/kingdice.webp">
-      <img src="./src/assets/images/KingDice.png" alt="KingDice">
-    </picture>
-    <div class="container">
-      <div class="up right">
-        <div class="container">
-          <div class="title-container">
-            <h3 class="text" >Mi Primera decada.!</h3>
-            <h2 class="title">!Celebremos juntos¡</h2>
-            <p>Mi cumpleaños No.</p>
-            <picture>
-              <img src="./src/assets/images/Cuphead.webp" alt="Cuphead">
-              <h2>"10"</h2>
-              <img src="./src/assets/images/Mugman.webp" alt="Mugman">
+  <div class="wrapper">
+    <div class="ticket">
+      <picture class="king">
+        <source media="(min-width: 768px)" srcset="./src/assets/images/kingdice.webp">
+        <img src="./src/assets/images/KingDice.png" alt="KingDice">
+      </picture>
+      <div class="container">
+        <div class="up right">
+          <div class="container">
+            <div class="title-container">
+              <h3 class="text" >Mi Primera decada.!</h3>
+              <h2 class="title">!Celebremos juntos¡</h2>
+              <p>Mi cumpleaños No.</p>
+              <picture>
+                <img src="./src/assets/images/Cuphead.webp" alt="Cuphead">
+                <h2>"10"</h2>
+                <img src="./src/assets/images/Mugman.webp" alt="Mugman">
+              </picture>
+            </div>
+            <p>Kevin Yazhid Palma</p>
+          </div>
+        </div>
+        <div class="division">
+          <span></span>
+        </div>
+        <div class="down left">
+          <div class="container">
+            <p class="date">El domingo 28 de agosto</p>
+            <p class="time">A las 03:00 de la tarde</p>
+            <div class="ubication">
+              <p>Te espero en mi casita..!</p>
+              <a href="https://www.google.com.gt/maps/dir//14.796454,-89.54995/@14.7966094,-89.5501348,19.08z">
+                <img src="./src/assets/images/ubication.png" alt="como llegar">
+              </a>
+              <span>10mo Cumpleaños Kevin Yazhid Palma</span>
+            </div>
+          </div>
+          <div class="images">
+            <picture class="root-pack">
+              <img src="./src/assets/images/The_Root_Pack.webp" alt="RootPack">
+            </picture>
+            <picture class="bars">
+              <img src="./src/assets/images/bars" alt="">
             </picture>
           </div>
-          <p>Kevin Yazhid Palma</p>
-        </div>
-      </div>
-      <div class="division">
-        <span></span>
-      </div>
-      <div class="down left">
-        <div class="container">
-          <p class="date">El domingo 28 de agosto</p>
-          <p class="time">A las 03:00 de la tarde</p>
-          <div class="ubication">
-            <p>Te espero en mi casita..!</p>
-            <a href="https://www.google.com.gt/maps/dir//14.796454,-89.54995/@14.7966094,-89.5501348,19.08z">
-              <img src="./src/assets/images/ubication.png" alt="como llegar">
-            </a>
-            <span>10mo Cumpleaños Kevin Yazhid Palma</span>
-          </div>
-        </div>
-        <div class="images">
-          <picture class="root-pack">
-            <img src="./src/assets/images/The_Root_Pack.webp" alt="RootPack">
-          </picture>
-          <picture class="bars">
-            <img src="./src/assets/images/bars" alt="">
-          </picture>
         </div>
       </div>
     </div>
